--- a/civil-searcher/src/App.css
+++ b/civil-searcher/src/App.css
@@ -1,32 +1,25 @@
 .App {
   text-align: center;
+  margin-bottom: auto;
+
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.collection{
+  overflow-y: scroll;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+.collectionItem{
   color: white;
+  background-image: url(images/random.jpg);
 }
 
-.App-title {
-  font-size: 1.5em;
+input[type=text] {
+  color: red;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
 }
 
-.App-intro {
-  font-size: large;
-}
-
-.intro{
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+::placeholder {
+    color: red;
 }
