--- a/civil-searcher/src/index.css
+++ b/civil-searcher/src/index.css
@@ -1,5 +1,20 @@
+* {
+ box-sizing: border-box;
+}
+*:before,
+*:after {
+ box-sizing: border-box;
+}
+html,
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+ height: 100%;
+ position: relative;
+ background-image: url(images/capitol.png);
+}
+
+
+footer {
+ position: fixed;
+ bottom: 0;
+ width: 100%;
 }
