--- a/civil-searcher/src/App.css
+++ b/civil-searcher/src/App.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Bitter');
+
 .App {
   text-align: center;
   margin-bottom: auto;
+  font-family: "Bitter", serif;
 
 }
 
@@ -22,4 +25,8 @@ input[type=text] {
 
 ::placeholder {
     color: red;
+}
+
+.intro{
+  font-size: 140%;
 }
