--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,7 @@
   text-align: center;
   margin-bottom: auto;
   font-family: "Bitter", serif;
+  height: 100%;
 
 }
 
@@ -46,6 +47,10 @@ input[type=text] {
   padding: 12px 20px;
   margin: 8px 0;
   box-sizing: border-box;
+}
+
+.buttonPadding{
+  padding-bottom: 50%;
 }
 
 ::placeholder {
