--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@
   margin-bottom: auto;
   font-family: "Bitter", serif;
   height: 100%;
-  
+
 }
 
 .collection{
@@ -60,6 +60,8 @@ input[type=text] {
 .intro{
   font-size: 140%;
   padding-bottom: 50%;
+  text-align: center;
+  
 }
 
 .invisible {
